# jadro

./: Cargo.toml  readme.md  run.sh
.cargo/: config.toml
src/: interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
src/interrupts/: idt.rs  mod.rs
tests/: basic_boot2.rs  exeptions_0_divide_by_zero.rs  exeptions_14_page_fault.rs  exeptions_3_breakpoint.rs  exeptions_6_invalid_opcode.rs  should_panic.rs
